c/examples/writing-a-c-compiler-tests/tests/chapter_10/valid/extra_credit/goto_skip_static_initializer.c
int main(void) {
    goto end;
    /* Since x is static, it's initialized at program startup,
     * so its value will be 10 even though we jump over this declaration
     */
    static int x = 10;
    end:
        return x;
}