c/examples/writing-a-c-compiler-tests/tests/chapter_10/invalid_types/non_constant_static_local_initializer.c
int main(void) {
    int a = 1;
    /* b has static storage duration,
     * so its initializer must be constant.
     */
    static int b = a * 2;
    return b;
}